feat: make user input and hidden the actual ktv

--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
 </head>
 <body>
     <div class="container">
+        <div class="user-input">
+            <div class="user-input-card">
+                <h1>Kartu Tanda Virtual</h1>
+                <div class="user-form">
+                    <form action="">
+                        <div class="form-item">
+                            <label for=""><p>Username Youtube</p></label>
+                            <input type="text" class="form-input">
+                        </div>
+                        <div class="form-item">
+                            <label for="">
+                                <h2>Oshimen</h2>
+                            </label>
+                            <select name="member" id="member" class="form-input form-select">
+                                <option disabled selected>Click untuk memilih oshimen</option>
+                                <option value="kana">Kanaia Asa</option>
+                                <option value="tana">Tana Nona</option>
+                                <option value="pia">Pia Meraleo</option>
+                              </select>
+                        </div>                 
+                        <div class="form-item">
+                            <label for=""><p>Tanggal Join</p></label>
+                            <input type="text" class="form-input" id="tgl-join" disabled>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
         <div class="card">
             <div class="card-front">
                 <div class="card-header">
@@ -15,22 +43,29 @@
                 </div>
                 <div class="card-body">
                     <form action="">
-                        <label for="">
-                            <h2>Username Youtube</h2>
-                        </label>
-                        <input type="text">
-                        <label for="">
-                            <h2>Oshimen</h2>
-                        </label>
-                        <select name="member" id="member">
-                            <option value="kana">Kana</option>
-                            <option value="tana">Tana</option>
-                            <option value="pia">Pia</option>
-                          </select>
-                        <label for="">
-                            <h2>Username Youtube</h2>
-                        </label>
-                        <input type="text">
+                        <div class="form-item">
+                            <label for="">
+                                <h2>Username Youtube</h2>
+                            </label>
+                            <input type="text" class="form-input">
+                        </div>
+                        <div class="form-item">
+                            <label for="">
+                                <h2>Oshimen</h2>
+                            </label>
+                            <select name="member" id="member" class="form-input form-select">
+                                <option disabled selected>Click untuk memilih oshimen</option>
+                                <option value="kana">Kanaia Asa</option>
+                                <option value="tana">Tana Nona</option>
+                                <option value="pia">Pia Meraleo</option>
+                              </select>
+                        </div>
+                        <div class="form-item">
+                            <label for="">
+                                <h2>Tanggal Join</h2>
+                            </label>
+                            <input type="text" class="form-input">
+                        </div>
                     </form>
                     <div class="profile-container">
                         <div class="profile-picture"></div>
