--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <title>Kartu Tanda Virtual Generator</title>
 </head>
 <body>
     <div class="container">
         <div class="user-input">
             <div class="user-input-card">
-                <h1>Kartu Tanda Virtual</h1>
+                <h1>Kartu Tanda Virtual Generator</h1>
                 <div class="user-form">
-                    <form action="">
+                    <form id="ktvForm">
                         <div class="form-item">
-                            <label for=""><p>Username Youtube</p></label>
-                            <input type="text" class="form-input">
+                            <label for="user-yt"><p>Username Youtube</p></label>
+                            <input type="text" id="user-yt" class="form-input">
                         </div>
                         <div class="form-item">
-                            <label for="">
+                            <label for="member">
                                 <h2>Oshimen</h2>
                             </label>
                             <select name="member" id="member" class="form-input form-select">
@@ -26,89 +27,98 @@
                                 <option value="kana">Kanaia Asa</option>
                                 <option value="tana">Tana Nona</option>
                                 <option value="pia">Pia Meraleo</option>
-                              </select>
-                        </div>                 
-                        <div class="form-item">
-                            <label for=""><p>Tanggal Join</p></label>
-                            <input type="text" class="form-input" id="tgl-join" disabled>
+                            </select>
                         </div>
                         <div class="form-item">
-                            <label for=""><p>Unggah Foto</p></label>
-                            <input type="file" name="avatar" id="">
+                            <label for="tgl-join"><p>Tanggal Join</p></label>
+                            <input type="text" id="tgl-join" class="form-input" disabled>
+                        </div>
+                        <div class="form-item">
+                            <label for="avatar"><p>Unggah Foto</p></label>
+                            <input type="file" name="avatar" id="avatar">
                         </div>
                         <div class="btn-container">
-                            <button type="submit" class="btn-submit">Make KTV</button>
+                            <button type="submit" class="btn-submit" id="downloadPDF">Make KTV</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="card">
+        <div class="card" style="display:none;">
             <div class="card-front">
                 <div class="card-header">
                     <h1>Kartu Tanda Virtual</h1>
                 </div>
                 <div class="card-body">
-                    <form action="">
-                        <div class="form-item">
-                            <label for="">
-                                <h2>Username Youtube</h2>
-                            </label>
-                            <input type="text" class="form-input">
-                        </div>
-                        <div class="form-item">
-                            <label for="">
-                                <h2>Oshimen</h2>
-                            </label>
-                            <select name="member" id="member" class="form-input form-select">
-                                <option disabled selected>Click untuk memilih oshimen</option>
-                                <option value="kana">Kanaia Asa</option>
-                                <option value="tana">Tana Nona</option>
-                                <option value="pia">Pia Meraleo</option>
-                              </select>
-                        </div>
-                        <div class="form-item">
-                            <label for="">
-                                <h2>Tanggal Join</h2>
-                            </label>
-                            <input type="text" class="form-input">
-                        </div>
-                    </form>
+                    <div class="form-item">
+                        <label for="">
+                            <h2>Username Youtube</h2>
+                        </label>
+                        <input type="text" class="form-input" id="user_yt_ktv" readonly>
+                    </div>
+                    <div class="form-item">
+                        <label for="">
+                            <h2>Oshimen</h2>
+                        </label>
+                        <input type="text" class="form-input" id="oshimen_ktv" readonly>
+                    </div>
+                    <div class="form-item">
+                        <label for="">
+                            <h2>Tanggal Join</h2>
+                        </label>
+                        <input type="text" class="form-input" id="tgl_join_ktv" readonly>
+                    </div>
                     <div class="profile-container">
-                        <div class="profile-picture"></div>
+                        <div id="profile-picture"></div>
                         <h2>Masa Berlaku</h2>
                         <h2>Seumur Hidup</h2>
                     </div>
                 </div>
             </div>
             <div class="card-back">
-                <img src="./assets/KTV Back.png" alt="">
+                <img src="./assets/KTV Back.png" alt="" width="503">
             </div>
         </div>
     </div>
     <script>
-        const tgl_join = document.getElementById("tgl-join")
+        // Populate the join date
+        const tgl_join = document.getElementById("tgl-join");
         const date = new Date();
-
         const stringMonth = {
-                1: "January",
-                2: "February",
-                3: "March",
-                4: "April",
-                5: "May",
-                6: "June",
-                7: "July",
-                8: "August",
-                9: "September",
-                10: "October",
-                11: "November",
-                12: "December"
+            1: "January", 2: "February", 3: "March", 4: "April", 5: "May", 6: "June",
+            7: "July", 8: "August", 9: "September", 10: "October", 11: "November", 12: "December"
         };
-
         let day = date.getDate();
         let month = date.getMonth() + 1;
         let year = date.getFullYear();
-        tgl_join.value = `${day} ${stringMonth[month]} ${year}`
+        tgl_join.value = `${day} ${stringMonth[month]} ${year}`;
+
+// Ensure the card is shown only during PDF generation
+document.getElementById('downloadPDF').addEventListener('click', function (event) {
+    event.preventDefault();
+
+    // Populate the card with user input
+    document.getElementById('user_yt_ktv').value = document.getElementById('user-yt').value;
+    document.getElementById('oshimen_ktv').value = document.getElementById('member').options[document.getElementById('member').selectedIndex].text;
+    document.getElementById('tgl_join_ktv').value = document.getElementById('tgl-join').value;
+
+    // Display the card temporarily
+    const card = document.querySelector('.card');
+    card.style.display = 'block';
+
+    // Use html2pdf to generate and download the PDF
+    html2pdf().from(card).set({
+        margin: 1,
+        filename: 'card-content.pdf',
+        image: { type: 'jpeg', quality: 0.98 },
+        html2canvas: { scale: 2 },
+        jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+    }).save().then(() => {
+        // Hide the card again
+        card.style.display = 'none';
+    });
+});
+
     </script>
 </body>
 </html>
