feat: make responsive

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                     <form id="ktvForm">
                         <div class="form-item">
                             <label for="user-yt"><p>Username Youtube</p></label>
-                            <input type="text" id="user-yt" class="form-input">
+                            <input type="text" id="user-yt" class="form-input-user">
                         </div>
                         <div class="form-item">
                             <label for="member">
-                                <h2>Oshimen</h2>
+                                <p>Oshimen</p>
                             </label>
-                            <select name="member" id="member" class="form-input form-select">
+                            <select name="member" id="member" class="form-input-user form-select-user">
                                 <option disabled selected>Click untuk memilih oshimen</option>
                                 <option value="kana">Kanaia Asa</option>
                                 <option value="tana">Tana Nona</option>
@@ -31,7 +31,7 @@
                         </div>
                         <div class="form-item">
                             <label for="tgl-join"><p>Tanggal Join</p></label>
-                            <input type="text" id="tgl-join" class="form-input" disabled>
+                            <input type="text" id="tgl-join" class="form-input-user" disabled>
                         </div>
                         <div class="form-item">
                             <label for="avatar"><p>Unggah Foto</p></label>
