feat: add meta data

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://wargavi48.github.io/ktv/assets/KTV%20Back.png">
+    <meta property="og:title" content="Kartu Tanda Virtual (KTV)">
+    <meta name="description" content="Kartu Tanda Virtual Project By Wargavi48 (Proker dari Pia Meraleo)">
+    <meta name="author" content="Wargavi48">
+    <meta name="keywords" content="Vtuber, Virtual Youtuber, JKT48V, jkt48v, wargavi48, wargavi, Wargavi, Wargavi48, Warga Virtual 48">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <title>Kartu Tanda Virtual Generator</title>
