feat: add meta data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://wargavi48.github.io/ktv/assets/KTV%20Back.png">
     <meta property="og:title" content="Kartu Tanda Virtual (KTV)">
+    <meta property="og:description" content="Kartu Tanda Virtual Project By Wargavi48 (Proker dari Pia Meraleo)">
     <meta name="description" content="Kartu Tanda Virtual Project By Wargavi48 (Proker dari Pia Meraleo)">
     <meta name="author" content="Wargavi48">
     <meta name="keywords" content="Vtuber, Virtual Youtuber, JKT48V, jkt48v, wargavi48, wargavi, Wargavi, Wargavi48, Warga Virtual 48">
